clean file to make it more readable

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <div class="content">
       <div id="locationInfo"></div>
 
-      <div id="forecastWeather">bonjour</div>
+      <div id="forecastWeather"></div>
     </div>
     <div class="footer">Made by Track404</div>
   </body>
